# medical-ai-clinical-platform

./: .dockerignore  .gitignore  Dockerfile.api  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/core/: __init__.py  config.py  security.py
api/models/: __init__.py  schemas.py
api/routers/: audit.py  auth.py  fhir.py  inference.py
compliance/: __init__.py  audit.py
compliance/docs/: 21_CFR_Part_11_alignment.md  FDA_AI_ML_SaMD_alignment.md
dicom_handler/: __init__.py  normalizer.py  parser.py
fhir_client/: __init__.py  client.py  reader.py  writer.py
ml/: __init__.py  gradcam.py  inference.py  model_registry.py
tests/: test_audit.py  test_dicom.py  test_fhir.py
ui/: app.py  requirements.txt
